Added new endpoints for deployment